@@ -1,0 +1,1 @@
+../inputs/cif_printout/cif2_hash_with_no_su.cif
