@@ -1,0 +1,2 @@
+Test the way CIF2 table structure that contains a numeric value without
+standard uncertainty is processed.
