@@ -1,0 +1,6 @@
+#\#CIF_2.0
+data_1
+_tag_1 {
+'''x''':
+12
+}
