@@ -1,0 +1,35 @@
+scripts/cif_printout: tests/cases/cif_printout_013.inp: NOTE, 0 error(s) encountered while processing the file.
+$datablock1 = {
+                'cifversion' => {
+                                  'major' => 2,
+                                  'minor' => 0
+                                },
+                'inloop' => {},
+                'loops' => [],
+                'name' => '1',
+                'precisions' => {
+                                  '_tag_1' => [
+                                                {
+                                                  'x' => undef
+                                                }
+                                              ]
+                                },
+                'save_blocks' => [],
+                'tags' => [
+                            '_tag_1'
+                          ],
+                'types' => {
+                             '_tag_1' => [
+                                           {
+                                             'x' => 'INT'
+                                           }
+                                         ]
+                           },
+                'values' => {
+                              '_tag_1' => [
+                                            {
+                                              'x' => '12'
+                                            }
+                                          ]
+                            }
+              };
