@@ -48,6 +48,8 @@ cod-tools (unreleased)
       - removed duplicated option description.
     - cif_validate:
       - corrected the way character ranges are handled.
+    - COD::ShowStruct:
+      - corrected the way undefined hash values are handled.
 
 cod-tools (2.4)
 
